--- a/simple-weather/simple-weather/Base.lproj/Main.storyboard
+++ b/simple-weather/simple-weather/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina6_1" orientation="portrait">
+    <device id="retina3_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -15,65 +15,79 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="simple_weather" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="o3W-ys-IbW">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="362"/>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i1j-a9-yrl">
-                                <rect key="frame" x="30" y="64" width="49" height="29"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Temperature" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hql-5C-zOI">
-                                <rect key="frame" x="30" y="153" width="193.5" height="43"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="36"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Location" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dNR-jB-Zbv">
-                                <rect key="frame" x="30" y="288" width="75.5" height="24"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Weather" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xaw-Tl-70L">
-                                <rect key="frame" x="300.5" y="288" width="73.5" height="24"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Clear" translatesAutoresizingMaskIntoConstraints="NO" id="fGm-35-pAg">
-                                <rect key="frame" x="358" y="111" width="16" height="16"/>
-                            </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YW4-dZ-YQ7" userLabel="subView">
+                                <rect key="frame" x="0.0" y="20" width="320" height="311"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="o3W-ys-IbW">
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="311"/>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i1j-a9-yrl">
+                                        <rect key="frame" x="20" y="20" width="49" height="48"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" misplaced="YES" text="Temperature" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hql-5C-zOI">
+                                        <rect key="frame" x="30" y="129" width="145" height="43"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Location" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dNR-jB-Zbv">
+                                        <rect key="frame" x="20" y="244" width="55.5" height="17"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="Clear" translatesAutoresizingMaskIntoConstraints="NO" id="fGm-35-pAg">
+                                        <rect key="frame" x="216" y="104" width="84" height="103"/>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Weather" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xaw-Tl-70L">
+                                        <rect key="frame" x="226" y="237" width="74" height="24"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="hql-5C-zOI" firstAttribute="top" secondItem="i1j-a9-yrl" secondAttribute="bottom" constant="70" id="1f1-aN-VV8"/>
+                                    <constraint firstAttribute="trailing" secondItem="Xaw-Tl-70L" secondAttribute="trailing" constant="20" id="1fz-eb-NMY"/>
+                                    <constraint firstAttribute="trailing" secondItem="fGm-35-pAg" secondAttribute="trailing" constant="20" id="4Wo-DE-e9B"/>
+                                    <constraint firstItem="hql-5C-zOI" firstAttribute="leading" secondItem="YW4-dZ-YQ7" secondAttribute="leading" constant="20" id="5JO-cL-6wv"/>
+                                    <constraint firstAttribute="bottom" secondItem="Xaw-Tl-70L" secondAttribute="bottom" constant="50" id="A2Q-os-v3r"/>
+                                    <constraint firstAttribute="bottom" secondItem="o3W-ys-IbW" secondAttribute="bottom" id="DQj-MH-DI8"/>
+                                    <constraint firstItem="fGm-35-pAg" firstAttribute="top" secondItem="YW4-dZ-YQ7" secondAttribute="top" constant="100" id="YKp-gE-kLU"/>
+                                    <constraint firstItem="i1j-a9-yrl" firstAttribute="top" secondItem="YW4-dZ-YQ7" secondAttribute="top" constant="20" id="cPk-Cg-Z3N"/>
+                                    <constraint firstItem="Xaw-Tl-70L" firstAttribute="top" secondItem="fGm-35-pAg" secondAttribute="bottom" constant="30" id="cmB-FY-8Bz"/>
+                                    <constraint firstItem="i1j-a9-yrl" firstAttribute="leading" secondItem="YW4-dZ-YQ7" secondAttribute="leading" constant="20" id="gyh-tP-lV2"/>
+                                    <constraint firstItem="dNR-jB-Zbv" firstAttribute="top" secondItem="hql-5C-zOI" secondAttribute="bottom" constant="70" id="iEY-Gr-aBs"/>
+                                    <constraint firstItem="o3W-ys-IbW" firstAttribute="top" secondItem="YW4-dZ-YQ7" secondAttribute="top" id="raY-v4-Pvm"/>
+                                    <constraint firstAttribute="trailing" secondItem="o3W-ys-IbW" secondAttribute="trailing" id="tQ0-dm-dRf"/>
+                                    <constraint firstItem="o3W-ys-IbW" firstAttribute="leading" secondItem="YW4-dZ-YQ7" secondAttribute="leading" id="u9s-g3-gP4"/>
+                                    <constraint firstAttribute="bottom" secondItem="dNR-jB-Zbv" secondAttribute="bottom" constant="50" id="vrQ-Ad-5cN"/>
+                                    <constraint firstItem="dNR-jB-Zbv" firstAttribute="leading" secondItem="YW4-dZ-YQ7" secondAttribute="leading" constant="20" id="zdD-mK-LYv"/>
+                                </constraints>
+                            </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="j7d-G7-BqT">
-                                <rect key="frame" x="0.0" y="362" width="414" height="534"/>
+                                <rect key="frame" x="0.0" y="331" width="320" height="149"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="fGm-35-pAg" secondAttribute="trailing" constant="40" id="4c3-8T-jre"/>
-                            <constraint firstItem="j7d-G7-BqT" firstAttribute="top" secondItem="Xaw-Tl-70L" secondAttribute="bottom" constant="50" id="5UW-xf-fjc"/>
-                            <constraint firstItem="j7d-G7-BqT" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="9U2-U8-1cD"/>
-                            <constraint firstItem="o3W-ys-IbW" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="9v8-y2-ibG"/>
-                            <constraint firstItem="j7d-G7-BqT" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="AkK-6b-Xpn"/>
-                            <constraint firstItem="hql-5C-zOI" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="30" id="GvO-NO-Nxc"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="o3W-ys-IbW" secondAttribute="bottom" constant="500" id="Hnx-H2-P39"/>
-                            <constraint firstItem="j7d-G7-BqT" firstAttribute="top" secondItem="o3W-ys-IbW" secondAttribute="bottom" id="Hsi-4k-Mm2"/>
-                            <constraint firstItem="hql-5C-zOI" firstAttribute="top" secondItem="i1j-a9-yrl" secondAttribute="bottom" constant="60" id="NRj-Yu-ggf"/>
-                            <constraint firstItem="o3W-ys-IbW" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="WDi-Hk-eGl"/>
-                            <constraint firstItem="dNR-jB-Zbv" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="30" id="c20-Lp-cvs"/>
-                            <constraint firstItem="i1j-a9-yrl" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="che-tD-Fmv"/>
-                            <constraint firstItem="j7d-G7-BqT" firstAttribute="top" secondItem="dNR-jB-Zbv" secondAttribute="bottom" constant="50" id="eko-4M-7Cc"/>
-                            <constraint firstAttribute="bottom" secondItem="j7d-G7-BqT" secondAttribute="bottom" id="kFc-U8-v4f"/>
-                            <constraint firstItem="o3W-ys-IbW" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="oWM-4b-PhF"/>
-                            <constraint firstItem="fGm-35-pAg" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" constant="67" id="pJk-hx-ywz"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Xaw-Tl-70L" secondAttribute="trailing" constant="40" id="rFQ-SQ-h3h"/>
-                            <constraint firstItem="i1j-a9-yrl" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" constant="20" id="sza-fA-Icn"/>
-                            <constraint firstItem="i1j-a9-yrl" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="30" id="tdO-dI-kso"/>
+                            <constraint firstItem="j7d-G7-BqT" firstAttribute="leading" secondItem="YW4-dZ-YQ7" secondAttribute="leading" id="D9G-RP-KRk"/>
+                            <constraint firstAttribute="bottom" secondItem="j7d-G7-BqT" secondAttribute="bottom" id="De3-tW-WVX"/>
+                            <constraint firstItem="j7d-G7-BqT" firstAttribute="top" secondItem="YW4-dZ-YQ7" secondAttribute="bottom" id="DtV-Fr-3tW"/>
+                            <constraint firstItem="YW4-dZ-YQ7" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="KGY-Mj-fEw"/>
+                            <constraint firstItem="YW4-dZ-YQ7" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="LQp-eq-GPY"/>
+                            <constraint firstItem="j7d-G7-BqT" firstAttribute="trailing" secondItem="YW4-dZ-YQ7" secondAttribute="trailing" id="l7s-MO-egK"/>
+                            <constraint firstItem="YW4-dZ-YQ7" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="tVH-OE-dwE"/>
+                            <constraint firstAttribute="trailing" secondItem="YW4-dZ-YQ7" secondAttribute="trailing" id="uov-Ep-8GS"/>
+                            <constraint firstItem="YW4-dZ-YQ7" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="wkS-Gr-NZj"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -83,7 +97,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="137.68115942028987" y="118.52678571428571"/>
+            <point key="canvasLocation" x="136.875" y="117.5"/>
         </scene>
     </scenes>
     <resources>
